glx/testdata/invalid/invalid-relationship-participants/relationships/rel-marriage.glx
relationships:
  rel-marriage:
    type: marriage
    participants:
      - person: person-nonexistent
        role: spouse
      - person: person-father
        role: spouse
